# CodeSnapshot

./: .gitignore  README.md  __main__.py  git_mcp.py  main.py  pyproject.toml  server.py
codesnap/: __init__.py  config.py  git.py  models.py  store.py  task.py
