[project]
name = "CodeSnap"
version = "0.1.0"
description = "AI-powered code snapshot tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "colorama",
    "mcp[cli]>=1.7.1",
    "pydantic>=2.0.0",
    "gitpython>=3.1.30",
]

[project.scripts]
cs = "__main__:main"
